cmake_minimum_required (VERSION 2.8)

project (Skweltch)

enable_testing()

add_subdirectory (config) 
add_subdirectory (core) 
add_subdirectory (msg) 
add_subdirectory (monitor) 
add_subdirectory (machine) 
add_subdirectory (graph) 
add_subdirectory (pipe) 
add_subdirectory (reap) 
add_subdirectory (sink) 
add_subdirectory (tune) 
add_subdirectory (util) 
add_subdirectory (vent) 
add_subdirectory (work) 
add_subdirectory (build) 
